syntax = "proto3";

package miden_private_transport;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "types/note.proto";
import "types/account.proto";

// Note status enum
enum NoteStatus {
    SENT = 0;
    DUPLICATE = 1;
}

enum RegisterKeyStatus {
    ACCEPTED = 0;
    REJECTED = 1;
}

message EncryptedNote {
    bytes header = 1;
    bytes encrypted_details = 2;
}

message EncryptedNoteTimestamped {
    bytes header = 1;
    bytes encrypted_details = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message EncryptionKey {
    oneof value {
        bytes aes256gcm = 1;
        bytes x25519_pub = 2;
        bytes other = 3;
    }
}

// API request for sending a note
message SendNoteRequest {
    EncryptedNote note = 1;
}

// API response for sending a note
message SendNoteResponse {
    string id = 1;  // NoteId as hex string
    NoteStatus status = 2;
}

// API request for fetching notes
message FetchNotesRequest {
    uint32 tag = 1;
    google.protobuf.Timestamp timestamp = 2;
}

// API response for fetching notes
message FetchNotesResponse {
    repeated EncryptedNoteTimestamped notes = 1;
}

// Server health check response
message HealthResponse {
    string status = 1;
    google.protobuf.Timestamp timestamp = 2;
    string version = 3;
}

// Server statistics
message StatsResponse {
    uint64 total_notes = 1;
    uint64 total_tags = 2;
    repeated TagStats notes_per_tag = 3;
}

// Statistics for a specific tag
message TagStats {
    uint32 tag = 1;
    uint64 note_count = 2;
    google.protobuf.Timestamp last_activity = 3;
}

// API request for registering a key
message RegisterKeyRequest {
    account.AccountId account_id = 1;
    EncryptionKey encryption_key = 2;
}

// API response for registering a key
message RegisterKeyResponse {
    RegisterKeyStatus status = 1;
}

// API request for getting a registered key
message FetchKeyRequest {
    account.AccountId account_id = 1;
}

// API response for getting a registered key
message FetchKeyResponse {
    optional EncryptionKey encryption_key = 1;
}

// gRPC service definition
service MidenPrivateTransport {
    // Send a note to the server
    rpc SendNote(SendNoteRequest) returns (SendNoteResponse);
    
    // Fetch notes for a specific tag
    rpc FetchNotes(FetchNotesRequest) returns (FetchNotesResponse);
    
    // Health check
    rpc Health(google.protobuf.Empty) returns (HealthResponse);
    
    // Get server statistics
    rpc Stats(google.protobuf.Empty) returns (StatsResponse);

    // Register a key to the server
    rpc RegisterKey(RegisterKeyRequest) returns (RegisterKeyResponse);
    
    // Get a registered key from the server
    rpc FetchKey(FetchKeyRequest) returns (FetchKeyResponse);
} 
